final edits and changes

--- a/public/pages/homepage.html
+++ b/public/pages/homepage.html
@@ -13,21 +13,21 @@
 <body>
   <div class="container-fluid homepage-background bg-dark img-fluid">
     <nav class="homepage-navbar navbar navbar-expand-lg row py-5 offset-md-1 justify-content-center">
-      <div class="col">
+      <div class="col px-0">
         <a href="#" class="navbar-brand align-self-center mx-5">
           <img src="../images/cinch(white).png" alt="Cinch Logo">
         </a>
       </div>
       <div class=" d-flex flex-column collapse navbar-collapse col-5 justify-content-around">
         <div class="navbar-nav">
-          <a class="homepage-nav-buttons nav-item nav-link btn-outline-light" href="#">Home</a>
-          <a class="homepage-nav-buttons nav-item nav-link btn-outline-light" href="#">Features</a>
-          <a class="homepage-nav-buttons nav-item nav-link btn-outline-light" href="#">Products</a>
+          <a class="homepage-nav-buttons nav-item nav-link btn-outline-light light-montserrat" href="#">Home</a>
+          <a class="homepage-nav-buttons nav-item nav-link btn-outline-light light-montserrat" href="#">Features</a>
+          <a class="homepage-nav-buttons nav-item nav-link btn-outline-light light-montserrat" href="#">Products</a>
         </div>
       </div>
       <form class="form-inline col">
-        <button class="btn btn-light px-5 nav-link border-0 rounded-0">Login</button>
-        <button class="btn btn-outline-light px-5 nav-link border-0 rounded-0">Sign Up</button>
+        <button class="btn btn-light px-5 nav-link border-0 rounded-0 light-montserrat">Login</button>
+        <button class="btn btn-outline-light px-5 nav-link border-0 rounded-0 light-montserrat">Sign Up</button>
       </form>
     </nav>
     <div class="container justify-content-center text-center" style="margin-top: 90px">
@@ -57,7 +57,7 @@
               <input type="text" class="form-control rounded-0" placeholder="City or Zip">
             </div>
           </div>
-          <button class="submit btn w-50 btn-light px-4 rounded-0 my-4 text-uppercase" type="submit">Search</button>
+          <button class="submit btn w-50 btn-light px-4 rounded-0 my-4 text-uppercase light-montserrat" type="submit">Search</button>
         </form>
       </div>
     </div>
@@ -66,7 +66,7 @@
     <div class="row mx-5 justify-content-around">
       <div class="col mx-5">
         <div class="list-group">
-          <span class="list-group-item border-0 text-uppercase">Cinch Sports </span>
+          <span class="list-group-item border-0 text-uppercase light-montserrat">Cinch Sports </span>
           <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">About Cinch</a>
           <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Cinch Blog</a>
           <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Cinch Store</a>
@@ -75,7 +75,7 @@
       </div>
       <div class="col">
         <div class="list-group">
-          <span class="list-group-item border-0 text-uppercase">Help </span>
+          <span class="list-group-item border-0 text-uppercase light-montserrat">Help </span>
           <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Help Center</a>
           <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Video School</a>
           <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">FAQ</a>
@@ -84,7 +84,7 @@
       </div>
       <div class="col">
         <div class="list-group">
-          <span class="list-group-item border-0 text-uppercase">More </span>
+          <span class="list-group-item border-0 text-uppercase light-montserrat">More </span>
           <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Partners</a>
           <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Affiliate Program</a>
           <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Donate</a>
@@ -92,7 +92,7 @@
         </div>
       </div>
       <div class="container col col-md-4 offset-md-1 mt-2 justify-content-start">
-        <div class="row pb-3 text-uppercase">
+        <div class="row pb-3 text-uppercase light-montserrat">
           follow us
         </div>
         <div class="d-flex footer-images justify-content-md-start row">
@@ -112,11 +112,11 @@
         <form class="row">
           <div class="row">
             <div class="col my-4">
-              <label for="subscribe" class="pb-3 text-uppercase">Subscribe</label>
+              <label for="subscribe" class="pb-3 text-uppercase light-montserrat">Subscribe</label>
               <div class="input-group">
                 <input type="email" class="form-control rounded-0" id="subscribe" placeholder="Enter Your Email">
                 <span class="input-group-btn">
-                  <button type="submit" class="btn btn-dark rounded-0">SIGN UP</button>
+                  <button type="submit" class="btn btn-dark rounded-0 light-montserrat">SIGN UP</button>
                 </span>
               </div>
             </div>
