--- a/public/pages/program-detail.html
+++ b/public/pages/program-detail.html
@@ -43,25 +43,25 @@
       <form style:"width: 1162px;">
         <div class="form-row align-items-center px-auto mx-auto">
           <div class="form-group col-auto mr-3" style="width: 170px; margin-left: 10px;">
-            <label for="inputSport">Sport</label>
+            <label class="light-montserrat text-uppercase" for="inputSport">Sport</label>
             <select id="inputSport" class="detail-search-input form-control">
               <option selected>Soccer</option>
               <option>...</option>
             </select>
           </div>
           <div class="form-group col-auto mx-3" style="width: 170px;">
-            <label for="inputType">Type</label>
+            <label class="light-montserrat text-uppercase" for="inputType">Type</label>
             <select id="inputType" class="detail-search-input form-control">
             <option selected>Camps</option>
             <option>...</option>
           </select>
           </div>
           <div class="form-group col-auto mx-3" style="width: 170px;">
-            <label for="inputCity">Location</label>
+            <label class="light-montserrat text-uppercase" for="inputCity">Location</label>
             <input type="text" class="form-control detail-search-input" id="inputCity">
           </div>
           <div class="form-group col-auto mx-3" style="width: 170px;">
-            <label for="inputZip">Start Date</label>
+            <label class="light-montserrat text-uppercase" for="inputZip">Start Date</label>
             <input type="date" class="form-control detail-search-input" id="inputZip">
           </div>
           <div class="col-3 pt-3">
@@ -74,7 +74,8 @@
       <div class="container col">
         <div class="card mb-3 detail-program-detail">
           <div class="card-body text-center">
-            <p class="card-title"><img src="../images/Arsenal_FC.svg.png" alt="Arsenal">Arsenal FC</p>
+            <img src="../images/Arsenal_FC.svg.png" alt="Arsenal">
+            <p class="card-title">Arsenal FC</p>
             <p class="card-text">July 20-24 9am-3pm</p>
             <p class="card-text">Ages 5-14</p>
             <p class="card-text">@ Mirasol Park</p>
@@ -87,7 +88,7 @@
             skills in a fun and supportive environment for a rewarding experience for all. Kick off your summer with us and
             go home a better player!</p>
             <p class="card-text"> $599</p>
-            <button class="btn btn-cinch radius-0"> Register</button>
+            <button class="btn btn-cinch radius-0 light-montserrat text-uppercase" style="width: 232px;"> Register</button>
           </div>
         </div>
       </div>
@@ -106,7 +107,7 @@
               </div>
             </div>
           </li>
-          <li class="list-group-item my-3" style="width: 370px;">
+          <li class="list-group-item my-3 justify-content-center" style="width: 370px;">
             <div class="col">
               <img src="../images/Arsenal_FC.svg.png" alt="Arsenal">
             </div>
