--- a/public/pages/search-results.html
+++ b/public/pages/search-results.html
@@ -22,7 +22,7 @@
     <div class="col search-logo">
       <img src="../images/cinch(black).png" alt="Cinch Logo">
     </div>
-    <div class="col search-membership-buttons">
+    <div class="col search-membership-buttons" style="font-family:'Monserrat' 'sans-serif'; font-weight: 200;">
       <form class="form-inline">
         <div class="col">
           <button class="btn btn-light nav-link border rounded-0 text-uppercase" style="width: 144px;">
