--- a/public/pages/register.html
+++ b/public/pages/register.html
@@ -20,45 +20,45 @@
       <form>
         <div class="form-row">
           <div class="form-group col-md-6">
-            <label for="inputFirstName">First Name</label>
+            <label class="light-montserrat text-uppercase" for="inputFirstName">First Name</label>
             <input type="FirstName" class="form-control" placeholder="Your First Name">
           </div>
           <div class="form-group col-md-6">
-            <label for="inputLastName">Last Name</label>
+            <label class="light-montserrat text-uppercase" for="inputLastName">Last Name</label>
             <input type="LastName" class="form-control" placeholder="Your Last Name">
           </div>
         </div>
         <div class="form-row">
           <div class="form-group col-md-6">
-            <label for="inputEmail">Email</label>
+            <label class="light-montserrat text-uppercase" for="inputEmail">Email</label>
             <input type="email" class="form-control" placeholder="Your Email">
           </div>
           <div class="form-group col-md-6">
-            <label for="inputPassword4">Password</label>
+            <label class="light-montserrat text-uppercase" for="inputPassword4">Password</label>
             <input type="password" class="form-control" placeholder="Password">
           </div>
         </div>
         <div class="form-group">
-          <label for="inputAddress">Address</label>
+          <label class="light-montserrat text-uppercase" for="inputAddress">Address</label>
           <input type="text" class="form-control col-md-12" placeholder="Your Address">
         </div>
         <div class="form-row">
           <div class="form-group col-md-6">
-            <label for="inputCity">City</label>
+            <label class="light-montserrat text-uppercase" for="inputCity">City</label>
             <input type="text" class="form-control" placeholder="Your City">
           </div>
           <div class="form-group col-md-6">
-            <label for="inputZip">Zip</label>
+            <label class="light-montserrat text-uppercase" for="inputZip">Zip</label>
             <input type="text" class="form-control" placeholder="Your Zip Code">
           </div>
         </div>
         <div class="form-row">
           <div class="form-group col-md-6">
-            <label for="inputCity">State</label>
+            <label class="light-montserrat text-uppercase" for="inputCity">State</label>
             <input type="text" class="form-control" placeholder="Your State">
           </div>
           <div class="form-group col-md-6">
-            <label for="inputState">Country</label>
+            <label class="light-montserrat text-uppercase" for="inputState">Country</label>
             <select id="inputState" class="form-control">
               <option selected>United States</option>
               <option>...</option>
@@ -73,8 +73,8 @@
           </div>
         </div>
         <div class="row">
-          <button type="submit" class="btn btn-dark register-cinch-submit btn-cinch">
-            Sign in
+          <button type="submit" class="btn btn-dark register-cinch-submit light-montserrat text-uppercase btn-cinch">
+            Create my account
           </button>
         </div>
         <div class="row py-2">
