Added Montserrat text in more places

--- a/public/pages/program-detail.html
+++ b/public/pages/program-detail.html
@@ -142,7 +142,7 @@
     <div class="row mx-5 justify-content-around">
       <div class="col mx-5">
         <div class="list-group">
-          <span class="list-group-item border-0">Cinch Sports </span>
+          <span class="list-group-item border-0 light-montserrat text-uppercase">Cinch Sports </span>
           <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">About Cinch</a>
           <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Cinch Blog</a>
           <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Cinch Store</a>
@@ -151,7 +151,7 @@
       </div>
       <div class="col">
         <div class="list-group">
-          <span class="list-group-item border-0">Help </span>
+          <span class="list-group-item border-0 light-montserrat text-uppercase">Help </span>
           <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Help Center</a>
           <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">Video School</a>
           <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 py-1">FAQ</a>
@@ -160,7 +160,7 @@
       </div>
       <div class="col">
         <div class="list-group">
-          <span class="list-group-item border-0">More </span>
+          <span class="list-group-item border-0 light-montserrat text-uppercase">More </span>
           <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Partners</a>
           <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Affiliate Program</a>
           <a href="#" class="list-group-item list-group-item-action list-group-item-light border-0 mx-0 py-1">Donate</a>
@@ -168,7 +168,7 @@
         </div>
       </div>
       <div class="container col col-md-4 offset-md-1 mt-2 justify-content-start">
-        <div class="row pb-3">
+        <div class="row pb-3  light-montserrat text-uppercase">
           follow us
         </div>
         <div class="d-flex footer-images justify-content-md-start row">
@@ -188,7 +188,7 @@
         <form class="row">
           <div class="row">
             <div class="col my-4">
-              <label for="subscribe" class="pb-3">Subscribe</label>
+              <label for="subscribe" class="pb-3 light-montserrat text-uppercase">Subscribe</label>
               <div class="input-group">
                 <input type="email" class="form-control rounded-0" id="subscribe" placeholder="Enter Your Email">
                 <span class="input-group-btn">
