fixed join button on detail page

--- a/public/pages/program-detail.html
+++ b/public/pages/program-detail.html
@@ -24,7 +24,7 @@
       <div class="col search-membership-buttons-container mr-5">
         <form class="form-inline">
           <div class="col">
-            <button class="btn btn-light nav-link border-0 px-3 rounded-0 search-membership-buttons">
+            <button class="btn border nav-link px-3 rounded-0 search-membership-buttons">
               Join
             </button>
           </div>
