--- a/public/pages/program-detail.html
+++ b/public/pages/program-detail.html
@@ -15,7 +15,7 @@
   <div class="container-fluid">
     <div class="detail-nav search-nav row border align-items-center">
       <div class="col">
-        <nav class="navbar navbar-light br-0">
+        <nav class="navbar navbar-light border-0">
           <button class="navbar-toggler" type="button" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
