changed up fonts and font casing/placement

--- a/public/pages/program-detail.html
+++ b/public/pages/program-detail.html
@@ -24,12 +24,12 @@
       <div class="col search-membership-buttons-container mr-5">
         <form class="form-inline">
           <div class="col">
-            <button class="btn border nav-link px-3 rounded-0 search-membership-buttons">
+            <button class="btn border nav-link px-3 rounded-0 search-membership-buttons text-uppercase">
               Join
             </button>
           </div>
           <div class="col">
-            <button class="btn nav-link border-0 rounded-0 search-membership-buttons">
+            <button class="btn nav-link border-0 rounded-0 search-membership-buttons text-uppercase">
               Login
             </button>
           </div>
@@ -65,7 +65,7 @@
             <input type="date" class="form-control detail-search-input" id="inputZip">
           </div>
           <div class="col-3 pt-3">
-            <button class="btn btn-cinch rounded py-3" style="width: 370px;">Search</button>
+            <button class="btn btn-cinch rounded py-3 text-uppercase" style="width: 370px;">Search</button>
           </div>
         </div>
       </form>
@@ -95,41 +95,47 @@
       <div class="col detail-location-group">
         <ul class="list-group ">
           <li class="list-group-item mb-3" style="width: 370px;">
-            <div class="col">
-              <img src="../images/Arsenal_FC.svg.png" alt="Arsenal">
-            </div>
-            <div class="col">
-              <div class="row">
-                Winter ID Camp
+            <div class="row align-items-center">
+              <div class="col">
+                <img src="../images/Arsenal_FC.svg.png" alt="Arsenal">
               </div>
-              <div class="row">
-                Jan 24-28 @ Stub hub center
+              <div class="col-8">
+                <div class="row xlight-montserrat text-muted" style="font-size: 18pt;">
+                  Winter ID Camp
+                </div>
+                <div class="row light-montserrat text-muted text-uppercase" style="font-size: 12pt;">
+                  Jan 24-28 @ Stub hub center
+                </div>
               </div>
             </div>
           </li>
           <li class="list-group-item my-3 justify-content-center" style="width: 370px;">
-            <div class="col">
-              <img src="../images/Arsenal_FC.svg.png" alt="Arsenal">
-            </div>
-            <div class="col">
-              <div class="row">
-                 Miami Beach ID Camp
+            <div class="row align-items-center">
+              <div class="col">
+                <img src="../images/Arsenal_FC.svg.png" alt="Arsenal">
               </div>
-              <div class="row">
-                JUN 16-18 @ miami beach
+              <div class="col-8">
+                <div class="row xlight-montserrat text-muted" style="font-size: 18pt;">
+                  Miami Beach ID Camp
+                </div>
+                <div class="row light-montserrat text-muted text-uppercase" style="font-size: 12pt;">
+                  JUN 16-18 @ miami beach
+                </div>
               </div>
             </div>
           </li>
           <li class="list-group-item my-3" style="width: 370px;">
-            <div class="col">
-              <img src="../images/Arsenal_FC.svg.png" alt="Arsenal">
-            </div>
-            <div class="col">
-              <div class="row">
-                California ID Camp
+            <div class="row align-items-center">
+              <div class="col">
+                <img src="../images/Arsenal_FC.svg.png" alt="Arsenal">
               </div>
-              <div class="row">
-                may 15-19 @ SDSU
+              <div class="col-8">
+                <div class="row xlight-montserrat text-muted" style="font-size: 18pt;">
+                  California ID Camp
+                </div>
+                <div class="row light-montserrat text-muted text-uppercase" style="font-size: 12pt;">
+                  may 15-19 @ SDSU
+                </div>
               </div>
             </div>
           </li>
