--- a/public/pages/register.html
+++ b/public/pages/register.html
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div class="row">
-          <button type="submit" class="btn btn-dark register-cinch-submit light-montserrat text-uppercase btn-cinch">
+          <button type="submit" class="btn btn-dark register-cinch-submit xlight-montserrat text-uppercase btn-cinch">
             Create my account
           </button>
         </div>
