--- a/public/pages/homepage.html
+++ b/public/pages/homepage.html
@@ -20,14 +20,14 @@
       </div>
       <div class=" d-flex flex-column collapse navbar-collapse col-5 justify-content-around">
         <div class="navbar-nav">
-          <a class="homepage-nav-buttons nav-item nav-link btn-outline-light light-montserrat" href="#">Home</a>
-          <a class="homepage-nav-buttons nav-item nav-link btn-outline-light light-montserrat" href="#">Features</a>
-          <a class="homepage-nav-buttons nav-item nav-link btn-outline-light light-montserrat" href="#">Products</a>
+          <a class="homepage-nav-buttons nav-item nav-link btn-outline-light light-montserrat text-uppercase" href="#">Home</a>
+          <a class="homepage-nav-buttons nav-item nav-link btn-outline-light light-montserrat text-uppercase" href="#">Features</a>
+          <a class="homepage-nav-buttons nav-item nav-link btn-outline-light light-montserrat text-uppercase" href="#">Products</a>
         </div>
       </div>
       <form class="form-inline col">
-        <button class="btn btn-light px-5 nav-link border-0 rounded-0 light-montserrat">Login</button>
-        <button class="btn btn-outline-light px-5 nav-link border-0 rounded-0 light-montserrat">Sign Up</button>
+        <button class="btn btn-light px-5 nav-link border-0 rounded-0 light-montserrat text-uppercase">Join</button>
+        <button class="btn btn-outline-light px-5 nav-link border-0 rounded-0 light-montserrat text-uppercase">login</button>
       </form>
     </nav>
     <div class="container justify-content-center text-center" style="margin-top: 90px">
@@ -45,16 +45,16 @@
         <form class="homepage-search-form text-dark">
           <div class="form-row">
             <div class="col-6 px-0 my-3">
-              <input type="text" class="form-control rounded-0" placeholder="Organization Name">
+              <input type="text" class="homepage-form-input form-control rounded-0" placeholder="Organization Name">
             </div>
             <div class="col-2 px-0 my-3">
-              <input type="text" class="form-control rounded-0" placeholder="Select Sport">
+              <input type="text" class="homepage-form-input form-control rounded-0" placeholder="Select Sport">
             </div>
             <div class="col-2 px-0 my-3">
-              <input type="text" class="form-control rounded-0" placeholder="Activity Type">
+              <input type="text" class="homepage-form-input form-control rounded-0" placeholder="Activity Type">
             </div>
             <div class="col-2 px-0 my-3">
-              <input type="text" class="form-control rounded-0" placeholder="City or Zip">
+              <input type="text" class="homepage-form-input form-control rounded-0" placeholder="City or Zip">
             </div>
           </div>
           <button class="submit btn w-50 btn-light px-4 rounded-0 my-4 text-uppercase light-montserrat" type="submit">Search</button>
