--- a/public/pages/search-results.html
+++ b/public/pages/search-results.html
@@ -65,34 +65,50 @@
             <input type="date" class="form-control detail-search-input" id="inputZip">
           </div>
           <div class="col-3 pt-3">
-            <button class="btn btn-cinch rounded py-3" style="width: 370px;">Search</button>
+            <button class="btn btn-cinch text-uppercase rounded py-3" style="width: 370px;">Search</button>
           </div>
         </div>
       </form>
     </div>
-    <div class="row align-items-center text-center border px-5 py-3">
-      <div class="col-2">
-        <div class="row">
+    <div class="row align-items-center text-center border px-5 py-3" style="width: 1300px !important;">
+      <div class="col-2 m-0 w-120" style="width: 156px !important;">
+        <div class="row m-0">
           <img src="../images/Arsenal_FC.svg.png">
         </div>
-        <div class="row">
+        <div class="row py-2">
           <span class="text-uppercase">ARSENAL FC</span>
         </div>
       </div>
-      <div class="col-2">
-        <h3 class="text-uppercase">Soccer Camp</h3>
-        <span>July 20-24 9am-3pm</span>
-        <span>Ages 5-14</span>
-        <span>@ Mirasol Park</span>
+      <div class="col-3 align-items-center">
+        <div class="row justify-content-center text-uppercase" style="font-size: 20pt;">
+          <p>Soccer Camp</p>
+        </div>
+        <div class="row justify-content-center xlight-montserrat text-muted">
+          <p>July 20-24 9am-3pm </p>
+        </div>
+        <div class="row justify-content-center xlight-montserrat text-muted">
+          <p>Ages 5-14 </p>
+        </div>
+        <div class="row justify-content-center xlight-montserrat text-muted">
+          <p>@ Mirasol Park </p>
+        </div>
       </div>
-      <div class="col-3">
-          Arsenal FC offers players a unique look into how to train the Arsenal Way.
+      <div class="col-4" style="height: 120px; width: 268px">
+        <div class="row justify-content-center m-0 xlight-montserrat" style="margin: 0px; font-size: 18pt;">
+          <p>Arsenal FC offers players a </p>
+        </div>
+        <div class="row justify-content-center m-0 xlight-montserrat" style="margin: 0px; font-size: 18pt;">
+          <p>unique look into how to train the </p>
+        </div>
+        <div class="row justify-content-center m-0 xlight-montserrat" style="margin: 0px; font-size: 18pt;">
+          <p>Arsenal Way.</p>
+        </div>
       </div>
       <div class="col-1">
         $599
       </div>
-      <div class="col-4 pt-3">
-        <button class="btn btn-cinch rounded py-3" style="width: 370px;">
+      <div class="col-2 px-1">
+        <button class="btn btn-cinch text-uppercase rounded py-3" style="width: 232px;">
           Select
         </button>
       </div>
