fixing up homepage spacing

--- a/public/pages/homepage.html
+++ b/public/pages/homepage.html
@@ -33,31 +33,31 @@
     <div class="container justify-content-center text-center" style="margin-top: 90px">
       <div class="row">
         <div class="col homepage-tagline"> 
-          <h1 class="text-white">Welcome to</h1>
+          <h1 class="homepage-tagline text-white">Welcome to</h1>
         </div> 
       </div>
       <div class="row">
         <div class="col homepage-tagline"> 
-          <h1 class="text-white">Cinch Sports</h1>
+          <h1 class="homepage-tagline text-white">Cinch Sports</h1>
         </div> 
       </div>
       <div class="row justify-content-center m-3">
         <form class="homepage-search-form text-dark">
           <div class="form-row">
-            <div class="col-6 px-0 my-3">
+            <div class="col-6 rounded my-3" style="padding: 0px 1px">
               <input type="text" class="homepage-form-input form-control rounded-0" placeholder="Organization Name">
             </div>
-            <div class="col-2 px-0 my-3">
+            <div class="col-2 rounded my-3" style="padding: 0px 1px">
               <input type="text" class="homepage-form-input form-control rounded-0" placeholder="Select Sport">
             </div>
-            <div class="col-2 px-0 my-3">
+            <div class="col-2 rounded my-3" style="padding: 0px 1px">
               <input type="text" class="homepage-form-input form-control rounded-0" placeholder="Activity Type">
             </div>
-            <div class="col-2 px-0 my-3">
+            <div class="col-2 rounded my-3" style="padding: 0px 1px">
               <input type="text" class="homepage-form-input form-control rounded-0" placeholder="City or Zip">
             </div>
           </div>
-          <button class="submit btn w-50 btn-light px-4 rounded-0 my-4 text-uppercase light-montserrat" type="submit">Search</button>
+          <button class="submit btn w-50 btn-light px-4 rounded-0 my-4 text-uppercase xlight-montserrat" type="submit">Search</button>
         </form>
       </div>
     </div>
