added fonts and made changes to font sizes

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -5,44 +5,42 @@
   <title>Login</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
-    crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Lato:700|Montserrat:200,300,800|Roboto:500" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <link href="../style/master.css" rel="stylesheet">
 </head>
 
 <body>
   <div class="container text-center">
-    <h2 class="login-header-text my-5">Login</h2>
+    <h2 class="login-header-text my-5 xlight-montserrat" style="font-size: 42pt;">Login</h2>
     <div class="card login-container mx-auto mb-2 py-3">
       <div class="card-body login-form-box py-4">
         <img src="../images/bitmap.png" class="login-header-image" alt="Cinch Logo">
-        <span> + </span>
+        <span class="px-3"> + </span>
         <img src="../images/Arsenal_FC.svg.png" class="login-header-image" alt="Arsenal Logo">
         <form>
           <div class="row justify-content-center my-2">
             <div class="form-group col-md-12 text-left">
-              <label for="exampleInputEmail1" class="text-uppercase">E-Mail</label>
-              <input type="email" class="form-control py-3" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your Email Address">
+              <label for="login-email" class="text-uppercase light-montserrat">E-Mail</label>
+              <input type="email" class="login-input-text form-control py-3 light-montserrat" id="login-email" placeholder="Your Email Address">
             </div>
           </div>
           <div class="row justify-content-center my-3">
             <div class="form-group col-md-12 text-left">
-              <label for="login-password" class="text-uppercase">Password</label>
-              <input type="password" class="form-control py-3" id="login-password" placeholder="Password">
+              <label for="login-password" class="text-uppercase light-montserrat">Password</label>
+              <input type="password" class="login-input-text form-control py-3 light-montserrat" id="login-password" placeholder="Password">
             </div>
           </div>
           <div class="col text-center align-items-center">
             <div class="row justify-content-center">
-              <button type="submit" class="btn btn-cinch btn-block py-3 my-1 text-uppercase">Login</button>
+              <button type="submit" class="btn btn-cinch btn-block py-3 my-1 text-uppercase light-montserrat" style="font-size: 12pt;">Login</button>
             </div>
             <div class="row justify-content-center">
-              <button type="submit" class="btn btn-facebook btn-block text-light py-2 my-2"> 
+              <button type="submit" class="btn btn-facebook btn-block text-light py-2 my-2 lato"> 
                 <img src="../images/Facebook Logo.png"> Sign in with Facebook
               </button>
             </div>
             <div class="row justify-content-center mb-4">
-              <button type="submit" class="btn btn-google btn-block mt-2 mb-5 btn-outline-light py-2 text-dark"> 
+              <button type="submit" class="btn btn-google btn-block mt-2 mb-5 btn-outline-light py-2 text-dark roboto"> 
                 <img src="../images/logo_googleg_48dp.png"> Sign in with Google
               </button>
             </div>
