--- a/public/pages/search-results.html
+++ b/public/pages/search-results.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
     crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Lato:700|Montserrat:200,300,800|Roboto:500" rel="stylesheet">
+ 
   <link href="../style/master.css" rel="stylesheet">
 </head>
 
@@ -83,24 +83,24 @@
         <div class="row justify-content-center text-uppercase" style="font-size: 20pt;">
           <p>Soccer Camp</p>
         </div>
-        <div class="row justify-content-center xlight-montserrat text-muted">
+        <div class="row justify-content-center mb-0 xlight-montserrat" style="color: rgba(0, 0, 0, .7); font-size: 18pt;">
           <p>July 20-24 9am-3pm </p>
         </div>
-        <div class="row justify-content-center xlight-montserrat text-muted">
+        <div class="row justify-content-center mb-0 xlight-montserrat" style="color: rgba(0, 0, 0, .7); font-size: 18pt;">
           <p>Ages 5-14 </p>
         </div>
-        <div class="row justify-content-center xlight-montserrat text-muted">
+        <div class="row justify-content-center mb-0 xlight-montserrat" style="color: rgba(0, 0, 0, .7); font-size: 18pt;">
           <p>@ Mirasol Park </p>
         </div>
       </div>
       <div class="col-4" style="height: 120px; width: 268px">
-        <div class="row justify-content-center m-0 xlight-montserrat" style="margin: 0px; font-size: 18pt;">
+        <div class="row justify-content-center m-0 xlight-montserrat" style="margin: 0px; font-size: 18pt; color: rgba(0, 0, 0, .7);">
           <p>Arsenal FC offers players a </p>
         </div>
-        <div class="row justify-content-center m-0 xlight-montserrat" style="margin: 0px; font-size: 18pt;">
+        <div class="row justify-content-center m-0 xlight-montserrat" style="margin: 0px; font-size: 18pt; color: rgba(0, 0, 0, .7);">
           <p>unique look into how to train the </p>
         </div>
-        <div class="row justify-content-center m-0 xlight-montserrat" style="margin: 0px; font-size: 18pt;">
+        <div class="row justify-content-center m-0 xlight-montserrat" style="margin: 0px; font-size: 18pt; color: rgba(0, 0, 0, .7);">
           <p>Arsenal Way.</p>
         </div>
       </div>
