--- a/public/pages/homepage.html
+++ b/public/pages/homepage.html
@@ -6,7 +6,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Lato:700|Montserrat:200,300,800|Roboto:500" rel="stylesheet">
   <link href="../style/master.css" rel="stylesheet">
 </head>
 
@@ -57,7 +56,7 @@
               <input type="text" class="homepage-form-input form-control rounded-0" placeholder="City or Zip">
             </div>
           </div>
-          <button class="submit btn w-50 btn-light px-4 rounded-0 my-4 text-uppercase xlight-montserrat" type="submit">Search</button>
+          <button class="submit btn w-50 btn-light px-4 rounded-0 my-4 text-uppercase xlight-montserrat homepage-search-btn" type="submit">Search</button>
         </form>
       </div>
     </div>
