--- a/public/pages/register.html
+++ b/public/pages/register.html
@@ -7,58 +7,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
     crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Lato:700|Montserrat:200,300,800|Roboto:500" rel="stylesheet">
+ 
   <link href="../style/master.css" rel="stylesheet">
 </head>
 
 <body>
   <div class="container" style="margin-top: 90px;">
-    <div class="row align-self-center justify-content-center">
-      <h2>Create Your Account</h2>
+    <div class="row align-self-center justify-content-center xlight-montserrat">
+      <h2 style="font-size: 42pt;">Create Your Account</h2>
     </div>
     <div class="row justify-content-center">
-      <form>
+      <form style="width: 570px; margin-top: 40px">
         <div class="form-row">
-          <div class="form-group col-md-6">
-            <label class="light-montserrat text-uppercase" for="inputFirstName">First Name</label>
-            <input type="FirstName" class="form-control" placeholder="Your First Name">
+          <div class="form-group col-md-6 pr-3">
+            <label class="light-montserrat text-uppercase register-input-label" for="inputFirstName">First Name</label>
+            <input type="FirstName" class="register-input-text light-montserrat form-control" placeholder="Your First Name">
           </div>
-          <div class="form-group col-md-6">
-            <label class="light-montserrat text-uppercase" for="inputLastName">Last Name</label>
-            <input type="LastName" class="form-control" placeholder="Your Last Name">
+          <div class="form-group col-md-6 pl-3">
+            <label class="light-montserrat text-uppercase register-input-label" for="inputLastName">Last Name</label>
+            <input type="LastName" class="register-input-text light-montserrat form-control" placeholder="Your Last Name">
           </div>
         </div>
         <div class="form-row">
-          <div class="form-group col-md-6">
-            <label class="light-montserrat text-uppercase" for="inputEmail">Email</label>
-            <input type="email" class="form-control" placeholder="Your Email">
+          <div class="form-group col-md-6 pr-3">
+            <label class="light-montserrat text-uppercase register-input-label" for="inputEmail">Email</label>
+            <input type="email" class="register-input-text light-montserrat form-control" placeholder="Your Email">
           </div>
-          <div class="form-group col-md-6">
-            <label class="light-montserrat text-uppercase" for="inputPassword4">Password</label>
-            <input type="password" class="form-control" placeholder="Password">
+          <div class="form-group col-md-6 pl-3">
+            <label class="light-montserrat text-uppercase register-input-label" for="inputPassword4">Password</label>
+            <input type="password" class="register-input-text light-montserrat form-control" placeholder="Password">
           </div>
         </div>
         <div class="form-group">
-          <label class="light-montserrat text-uppercase" for="inputAddress">Address</label>
-          <input type="text" class="form-control col-md-12" placeholder="Your Address">
+          <label class="light-montserrat text-uppercase register-input-label" for="inputAddress">Address</label>
+          <input type="text" class="register-input-text light-montserrat form-control col-md-12" placeholder="Your Address">
         </div>
         <div class="form-row">
-          <div class="form-group col-md-6">
-            <label class="light-montserrat text-uppercase" for="inputCity">City</label>
-            <input type="text" class="form-control" placeholder="Your City">
+          <div class="form-group col-md-6 pr-3">
+            <label class="light-montserrat text-uppercase register-input-label" for="inputCity">City</label>
+            <input type="text" class="register-input-text light-montserrat form-control" placeholder="Your City">
           </div>
-          <div class="form-group col-md-6">
-            <label class="light-montserrat text-uppercase" for="inputZip">Zip</label>
-            <input type="text" class="form-control" placeholder="Your Zip Code">
+          <div class="form-group col-md-6 pl-3">
+            <label class="light-montserrat text-uppercase register-input-label" for="inputZip">Zip</label>
+            <input type="text" class="register-input-text light-montserrat form-control" placeholder="Your Zip Code">
           </div>
         </div>
         <div class="form-row">
-          <div class="form-group col-md-6">
-            <label class="light-montserrat text-uppercase" for="inputCity">State</label>
-            <input type="text" class="form-control" placeholder="Your State">
+          <div class="form-group col-md-6 pr-3">
+            <label class="light-montserrat text-uppercase register-input-label" for="inputCity">State</label>
+            <input type="text" class="register-input-text light-montserrat form-control" placeholder="Your State">
           </div>
-          <div class="form-group col-md-6">
-            <label class="light-montserrat text-uppercase" for="inputState">Country</label>
+          <div class="form-group col-md-6 pl-3">
+            <label class="light-montserrat text-uppercase register-input-label" for="inputState">Country</label>
             <select id="inputState" class="form-control">
               <option selected>United States</option>
               <option>...</option>
@@ -67,22 +67,33 @@
         </div>
         <div class="form-group">
           <div class="form-check">
-            <label class="form-check-label">
-            <input class="form-check-input" type="checkbox"> I agree with <a href="#"><u class="text-dark">Terms and Conditions</u></a>
-          </label>
+            <div class="row align-items-start mx-0 px-0">
+              <div class="px-0 mr-3">
+                <div class="rounded-circle align-items-center justify-content-center text-center" style="height: 22px; width: 22px !important; background-color: black;">
+                  <img src="../images/Arrow.png">
+                </div> 
+              </div>
+              <div class="col-auto px-0">
+                 I agree with
+                <a href="#">
+                  <u class="text-dark">Terms and Conditions</u>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="row">
-          <button type="submit" class="btn btn-dark register-cinch-submit xlight-montserrat text-uppercase btn-cinch">
+        <div class="row m-0">
+          <button type="submit" class="btn btn-dark register-cinch-submit light-montserrat text-uppercase btn-cinch">
             Create my account
           </button>
         </div>
-        <div class="row py-2">
-          <button type="submit" class="btn btn-primary col-md-6"> 
-            <img src="../images/Facebook Logo.png"> Sign in with Facebook
+        <div class="row py-2 m-0 justify-content-around">
+          <button type="submit" class="btn btn-facebook lato d-flex justify-content-around align-items-center" style="width: 275px"> 
+            <img src="../images/Facebook Logo.png"> 
+            <span> Sign up with Facebook </span>
           </button>
-          <button type="submit" class="btn btn-light col-md-6"> 
-            <img src="../images/logo_googleg_48dp.png"> Sign in with Google
+          <button type="submit" class="btn btn-google roboto d-flex justify-content-around align-items-center" style="width: 286px; margin-left: 5px; color: rgba(0, 0, 0, .5)"> 
+            <img src="../images/logo_googleg_48dp.png"> Sign up with Google
           </button>
         </div>
       </form>
